Switch API urls to https, switch from $.ajax to $.getJSON to solve the missing Access-Control-Allow-Origin header issue. Add AdBlocker notice, add live link.
Reformat.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
             <img id="icon" src="">
         </div>
         <div>This is made as an assignment for <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a>.</div>
-        <div>
-            View on <a href="https://github.com/leohajder/weather" target="_blank">Github</a>.
-            Live on <a href="http://codepen.io/leohajder/full/OpVZqb/" target="_blank">CodePen</a>.
-        </div>
-        <div class="text-danger">Use http instead of https.</div>
+        <div>View on <a href="https://github.com/leohajder/weather" target="_blank">GitHub</a>.</div>
+        <div class="text-danger">You might have to prevent your AdBlocker from blocking freegeoip.net if you get errors.</div>
         <div>
             <a href="https://leohajder.github.io" target="_blank"><span class="label label-primary"><i class="fa fa-globe fa-lg" aria-hidden="true"><span class="hidden-xs"> web</span></i></span></a>
             <a href="mailto:leohajder@gmail.com" target="_blank"><span class="label label-primary"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"><span class="hidden-xs"> email</span></i></span></a>
