--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cyborg/bootstrap.min.css">
-    <title>Leo Hajder | AJAX Weather App</title>
+    <title>Leo Hajder | Weather</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container text-center">
         <h1 class="page-header">AJAX Local Weather App</h1>
         <div id="out" class="jumbotron">
             <p><span id="city"></span>, <span id="country"></span></p>
@@ -16,10 +16,12 @@
             <p><span id="weather"></span> - <span id="description"></span></p>
             <img id="icon" src="">
         </div>
-        <div>This is made as an assignment for <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a>.</div>
-        <div>View on <a href="https://github.com/leohajder/weather" target="_blank">GitHub</a>.</div>
-        <div class="text-danger">You might have to prevent your AdBlocker from blocking freegeoip.net if you get errors.</div>
-        <div>
+        <p>
+            This is made as an assignment for <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a>. View
+            on <a href="https://github.com/leohajder/weather" target="_blank">GitHub</a>.
+        </p>
+        <p class="text-danger">You might have to prevent your AdBlocker from blocking freegeoip.net if you get errors.</p>
+        <p>
             <a href="https://leohajder.github.io" target="_blank"><span class="label label-primary"><i class="fa fa-globe fa-lg" aria-hidden="true"><span class="hidden-xs"> web</span></i></span></a>
             <a href="mailto:leohajder@gmail.com" target="_blank"><span class="label label-primary"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"><span class="hidden-xs"> email</span></i></span></a>
             <a href="https://github.com/leohajder" target="_blank"><span class="label label-primary"><i class="fa fa-github fa-lg" aria-hidden="true"><span class="hidden-xs"> github</span></i></span></a>
@@ -29,7 +31,7 @@
             <a href="https://www.facebook.com/leohajder" target="_blank"><span class="label label-primary"><i class="fa fa-facebook fa-lg" aria-hidden="true"><span class="hidden-xs"> facebook</span></i></span></a>
             <a href="https://www.youtube.com/c/LeoHajder" target="_blank"><span class="label label-primary"><i class="fa fa-youtube-play fa-lg" aria-hidden="true"><span class="hidden-xs"> youtube</span></i></span></a>
             <a href="http://www.last.fm/user/leohajder" target="_blank"><span class="label label-primary"><i class="fa fa-lastfm fa-lg" aria-hidden="true"><span class="hidden-xs"> last.fm</span></i></span></a>
-        </div>
+        </p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
