--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             <p><span id="city"></span><span id="country"></span></p>
             <p>
                 <span id="temperature" class="text-primary"></span>
-                <button type="button" id="units" class="btn btn-primary" data-toggle="tooltip" title="Click to switch scales." data-placement="right"></button>
+                <button type="button" id="units" class="btn btn-primary" style="display: none" data-toggle="tooltip" title="Click to switch units." data-placement="right"></button>
             </p>
             <p><span id="weather"></span><span id="description"></span></p>
             <img id="icon" src="">
         </div>
         <p>
-            This is made as an assignment for <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a>. View
-            on <a href="https://github.com/leohajder/weather" target="_blank">GitHub</a>.
+            This is made as an assignment for <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a>. View on <a href="https://github.com/leohajder/weather" target="_blank">GitHub</a>.
         </p>
-        <p class="text-danger">You might have to prevent your AdBlocker from blocking freegeoip.net if you get errors.</p>
+        <p>Click the temperature units button to switch between metric and imperial units.</p>
+        <p class="text-danger">You might have to disable AdBlocker.</p>
         <p>
             <a href="https://leohajder.github.io" target="_blank"><span class="label label-primary"><i class="fa fa-globe fa-lg" aria-hidden="true"><span class="hidden-xs"> web</span></i></span></a>
             <a href="mailto:leohajder@gmail.com" target="_blank"><span class="label label-primary"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"><span class="hidden-xs"> email</span></i></span></a>
